[gd_scene load_steps=5 format=1]

[ext_resource path="res://demo.gd" type="Script" id=1]
[ext_resource path="res://shooter.tscn" type="PackedScene" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -450, 0, 1480, 0, 1480, 130, -450, 130 )

[node name="demo" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground" type="Area2D" parent="."]

transform/pos = Vector2( -10, 480 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="ground"]

transform/pos = Vector2( -444.034, 0 )
transform/scale = Vector2( 1.8681, 1 )
polygon = Vector2Array( -1, 2, 1026, 1, 1026, 128, -3, 128 )
uv = Vector2Array(  )
color = Color( 0.257446, 0.867188, 0.324137, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground"]

build_mode = 0
polygon = Vector2Array( -450, 0, 1480, 0, 1480, 130, -450, 130 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Camera2D" type="Camera2D" parent="ground"]

transform/pos = Vector2( 530, -170 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="shooter" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 510, 410 )
script/script = ExtResource( 3 )

[node name="visualizer" parent="shooter"]

limit = 32

[node name="gui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="gui"]

rect/min_size = Vector2( 150, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 160.0
margin/bottom = 120.0
alignment = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Info" type="Label" parent="gui/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 242.0
margin/bottom = 14.0
text = "Shoot with SPACE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vel-label" type="Label" parent="gui/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 18.0
margin/right = 242.0
margin/bottom = 32.0
text = "Velocity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="velocity" type="HSlider" parent="gui/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 242.0
margin/bottom = 52.0
range/min = 0.0
range/max = 500.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="ang-label" type="Label" parent="gui/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 56.0
margin/right = 242.0
margin/bottom = 70.0
text = "Angle"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="angle" type="HSlider" parent="gui/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 74.0
margin/right = 242.0
margin/bottom = 90.0
range/min = 0.0
range/max = 180.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="grav-label" type="Label" parent="gui/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 94.0
margin/right = 242.0
margin/bottom = 108.0
text = "Gravity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gravity" type="HSlider" parent="gui/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 242.0
margin/bottom = 128.0
range/min = 9.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 9.8
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="limit-label" type="Label" parent="gui/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 132.0
margin/right = 242.0
margin/bottom = 146.0
text = "Plot points"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="limit" type="HSlider" parent="gui/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 150.0
margin/right = 242.0
margin/bottom = 166.0
range/min = 10.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="time-plot" type="CheckButton" parent="gui/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 170.0
margin/right = 242.0
margin/bottom = 192.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "plot based on time: 1 pt/s"
flat = false
align = 0

[connection signal="value_changed" from="gui/VBoxContainer/velocity" to="." method="_on_velocity_value_changed"]

[connection signal="value_changed" from="gui/VBoxContainer/angle" to="." method="_on_angle_value_changed"]

[connection signal="value_changed" from="gui/VBoxContainer/gravity" to="." method="_on_gravity_value_changed"]

[connection signal="value_changed" from="gui/VBoxContainer/limit" to="." method="_on_limit_value_changed"]

[connection signal="toggled" from="gui/VBoxContainer/time-plot" to="." method="_on_timeplot_toggled"]


[editable path="shooter"]
